--- a/notebooks/DL_Model_Evaluation.ipynb
+++ b/notebooks/DL_Model_Evaluation.ipynb
@@ -2,44 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:32: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:32: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  User_data[col] = User_data[col].astype('category').cat.codes\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:34: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:34: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  Hotel_data[col] = Hotel_data[col].astype('category').cat.codes\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:38: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:38: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  User_data['srch_ci'] = pd.to_datetime(User_data['srch_ci'])\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:39: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:39: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  User_data['srch_co'] = pd.to_datetime(User_data['srch_co'])\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:42: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:42: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  User_data['Reservation_Time'] = (User_data['srch_ci'] - User_data['srch_co']).dt.days\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_27704\\2427078235.py:49: SettingWithCopyWarning: \n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_35756\\2600536958.py:49: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average correlation rate: 0.95287996530532836914062500000000\n"
+      "Mean Average Precision: 0.95305478572845458984375000000000\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
     "\n",
     "# Calculate and display average correlation rate across all test users\n",
     "average_correlation_rate = sum(correlation_rates) / len(correlation_rates)\n",
-    "print(f\"Average correlation rate: {average_correlation_rate:.32f}\")"
+    "print(f\"Mean Average Precision: {average_correlation_rate:.32f}\")"
    ]
   }
  ],
